--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -12,6 +12,7 @@
     <sys:String x:Key="Glb_Close">Cerrar</sys:String>
     <sys:String x:Key="Glb_Cancel">Cancelar</sys:String>
     <sys:String x:Key="Glb_Delete">Eliminar</sys:String>
+    <sys:String x:Key="Glb_Change">Cambiar</sys:String>
     <sys:String x:Key="Glb_Principal">Principal</sys:String>
     <sys:String x:Key="Glb_Personal">Personal</sys:String>
     <sys:String x:Key="Glb_Orders">Comandas</sys:String>
@@ -24,7 +25,7 @@
     <sys:String x:Key="Glb_Suppliers">Proveedores</sys:String>
     <sys:String x:Key="Glb_SuppliersCategory">Categorias de Proveedor</sys:String>
     <sys:String x:Key="Glb_Quantity">Cantidad</sys:String>
-    <sys:String x:Key="Glb_SupplyOrders">Ordenes de Compra</sys:String>
+    <sys:String x:Key="Glb_SupplierOrders">Pedidos a Proveedor</sys:String>
     <sys:String x:Key="Glb_Reports">Reportes</sys:String>
     <sys:String x:Key="Glb_Categories">Categorías:</sys:String>
     <sys:String x:Key="Glb_PhoneNumber">Número de Teléfono:</sys:String>
@@ -86,6 +87,14 @@
     <sys:String x:Key="EmployeeRole_Waiter">Mesero(a)</sys:String>
     <sys:String x:Key="EmployeeRole_Cook">Cocinero(a)</sys:String>
     <sys:String x:Key="EmployeeRole_DeliveryDriver">Repartidor(a)</sys:String>
+    
+    <!--OrderSupplierStatus-->
+    <sys:String x:Key="OrdSupplier_StatusPending">Pendiente</sys:String>
+    <sys:String x:Key="OrdSupplier_StatusDelivered">Entregado</sys:String>
+    <sys:String x:Key="OrdSupplier_StatusCancelled">Cancelado</sys:String>
+    <sys:String x:Key="OrdSupplier_BtnStatusPending">Pendientes</sys:String>
+    <sys:String x:Key="OrdSupplier_BtnStatusDelivered">Entregados</sys:String>
+    <sys:String x:Key="OrdSupplier_BtnStatusCancelled">Cancelados</sys:String>
     
     <!--Personal-->
     <sys:String x:Key="Personal_Header">Personal</sys:String>
@@ -265,12 +274,21 @@
     <sys:String x:Key="RegSupplier_DialogDEditSuccess">La información del insumo ha sido actualizada correctamente y los cambios han sido guardados con éxito.</sys:String>
 
     <!--OrderSuppliers-->
-    <sys:String x:Key="OrdSuppliers_Header">Ordenes a Proveedores</sys:String>
-    <sys:String x:Key="OrdSuppliers_Desc">Visualiza y registra pedidos a proveedor realizados por Italia Pizza.</sys:String>
+    <sys:String x:Key="OrdSuppliers_Header">Pedidos a Proveedor</sys:String>
+    <sys:String x:Key="OrdSuppliers_Desc">Visualiza, registra, modifica y cancela pedidos de reabastecimiento realizados por Italia Pizza.</sys:String>
     <sys:String x:Key="OrdSuppliers_BtnNewOrderSupplier">Nuevo Pedido</sys:String>
     <sys:String x:Key="OrdSuppliers_TitleTable">Lista de Pedidos</sys:String>
+    <sys:String x:Key="OrdSuppliers_TableHFolio">Folio</sys:String>
+    <sys:String x:Key="OrdSuppliers_TableHSupplier">Proveedor</sys:String>
+    <sys:String x:Key="OrdSuppliers_TableHStatus">Estado</sys:String>
+    <sys:String x:Key="OrdSuppliers_OrdSupplier">Pedido a Proveedor</sys:String>
+    <sys:String x:Key="OrdSuppliers_DetailsSupplier">Proveedor:</sys:String>
+    <sys:String x:Key="OrdSuppliers_DetailsFolio">Folio:</sys:String>
+    <sys:String x:Key="OrdSuppliers_DetailsOrderedDate">Fecha del Pedido:</sys:String>
+    <sys:String x:Key="OrdSuppliers_DetailsDeliveredDate">Fecha de Entrega:</sys:String>
+    <sys:String x:Key="OrdSuppliers_TableHOrderDate">Fecha del Pedido</sys:String>
     <sys:String x:Key="OrdSuppliers_BtnDeleteOrder">Eliminar pedido</sys:String>
-    <sys:String x:Key="OrdSuppliers_BtnDeliveredOrder">Marcar como entrado</sys:String>
+    <sys:String x:Key="OrdSuppliers_BtnMarkReceived">Marcar como Recibido</sys:String>
 
     <!--Register Order Suppliers-->
     <sys:String x:Key="RegOrderSupplier_Header">Crear Pedido a Proveedor</sys:String>
@@ -285,7 +303,11 @@
     <sys:String x:Key="OrderSupplier_BtnDeleteSupply">Eliminar insumo</sys:String>
     <sys:String x:Key="OrderSupplier_BtnAddSupply">Añadir insumo</sys:String>
     <sys:String x:Key="OrderSupplier_BtnCancelar">Cancelar Orden</sys:String>
-   
+    <sys:String x:Key="RegOrderSupplier_DialogTDialogTSelection">¿Cambiar selección?</sys:String>
+    <sys:String x:Key="RegOrderSupplier_DialogDDialogTSelection">¿Estás seguro de que deseas seleccionar otro proveedor? Se descartarán todos los elementos del pedido a proveedor actual.</sys:String>
+    <sys:String x:Key="RegOrderSupplier_DialogTSuccess">Pedido a Proveedor registrado</sys:String>
+    <sys:String x:Key="RegOrderSupplier_DialogDSuccess">La orden de compra ha sido registrada correctamente y los datos han sido guardados con éxito.</sys:String>
+
     <!--Order-->
     <sys:String x:Key="OrderPage_BtnAddOrder">Añadir Orden</sys:String>
     <sys:String x:Key="OrderPage_BtnPayOrder">Pagar Orden</sys:String>
